--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,64 @@
-<% provide(:title, "Contact") %>
-<h1>Contact</h1>
-<p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/#contact">contact page</a>.
-</p>
+<!DOCTYPE HTML>
+<html>
+<head>
+<script type="text/javascript">
+function WebSocketTest()
+{
+  if ("WebSocket" in window)
+  {
+     alert("WebSocket is supported by your Browser!");
+     // Let us open a web socket
+     var ws = new WebSocket("ws://localhost:9998/echo");
+     ws.onopen = function()
+     {
+        // Web Socket is connected, send data using send()
+        ws.send("Message to send");
+        alert("Message is sent...");
+     };
+     ws.onmessage = function (evt) 
+     { 
+        var received_msg = evt.data;
+        alert("Message is received...");
+     };
+     ws.onclose = function()
+     { 
+        // websocket is closed.
+        alert("Connection is closed..."); 
+     };
+  }
+  else
+  {
+     // The browser doesn't support WebSocket
+     alert("WebSocket NOT supported by your Browser!");
+  }
+}
+</script>
+</head>
+<body>
+<div id="sse">
+   <a href="javascript:WebSocketTest()">Run WebSocket</a>
+</div>
+</body>
+</html>
+<div id="__chat_messages">
+  <ul>
+  </ul>
+</div>
+<div style="color:#0000FF">
+<input type="text" id="__chat_input">
+<input type="button" id="__chat_submit" value="Send" onclick="void(0)">
+</div>
+<script>
+new Chat.Controller("<%= SOCKET_URL %>/websocket", true);
+$('#__chat_submit').click(function() {
+	/alert($('#__chat_input').val());/
+	$.ajax ({
+		url: "<%= chats_path %>",
+		method: 'POST',
+		data: {
+			msg_body: $('#__chat_input').val()
+		}
+	});
+});
+</script>
+
